--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <!-- Posiciona el texto encima del modelo -->
 
 
-        <a-text
+        <!-- <a-text
         value="¡Hola Mundo!"
         color="black"
         position="0 3.0 -2.0"
         font="https://cdn.aframe.io/fonts/mozillavr.fnt"
-    ></a-text>
+    ></a-text> -->
 
     </a-scene>
 
