--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
-
 <body style="margin: 0; overflow: hidden;">
     <a-scene loading-screen="enabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-assets>
-            <a-asset-item id="animated-asset" src="assets/esferico/scene.gltf"></a-asset-item>
+            <!-- Cargar el modelo envolvente glTF -->
+            <a-asset-item id="environment-asset" src="assets/esferico/scene.gltf"></a-asset-item>
+            <!-- Cargar el modelo interior glTF -->
+            <a-asset-item id="interior-asset" src="assets/esferico/assetsRex/asset.gltf"></a-asset-item>
         </a-assets>
-        <!-- <a-sky color="green"></a-sky>  -->
-        <a-entity id="bowser-model" scale="0.30402344748577780 0.30402344748577780 0.30402344748577780"
-            animation-mixer="clip: run" gltf-model="#animated-asset" position="0 0.70 -2.0"></a-entity>
 
-        <!-- Posiciona el texto encima del modelo -->
+        <!-- Configurar la cámara dentro del entorno -->
+        <a-entity camera look-controls wasd-controls position="0 1.6 0"></a-entity>
 
-
-        <!-- <a-text
-        value="¡Hola Mundo!"
-        color="black"
-        position="0 3.0 -2.0"
-        font="https://cdn.aframe.io/fonts/mozillavr.fnt"
-    ></a-text> -->
-
+        <!-- Añadir el modelo envolvente 3D -->
+        <a-entity id="environment" 
+                  scale="10 10 10"
+                  gltf-model="#environment-asset" 
+                  position="0 0 0"></a-entity>
+        
+        <!-- Añadir el modelo interior 3D dentro del entorno -->
+        <a-entity id="interior-model" 
+            scale="0.25402344748577780 0.25402344748577780 0.25402344748577780"
+            animation-mixer="clip: run"
+            gltf-model="#interior-asset" 
+                  position="0 0.70 -2.0"></a-entity>
     </a-scene>
-
-
 </body>
-
 </html>
