--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a-scene loading-screen="enabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-assets>
             <!-- Cargar el modelo envolvente glTF -->
-            <a-asset-item id="environment-asset" src="/assets/new-world/scene.gltf"></a-asset-item>
+            <a-asset-item id="environment-asset" src="https://firebasestorage.googleapis.com/v0/b/examen-kuromi.appspot.com/o/models%2Fscene.gltf?alt=media&token=f6b2282e-18af-4e62-8e89-50ae42dde914"></a-asset-item>
             <!-- Cargar el modelo interior glTF -->
             <a-asset-item id="interior-asset" src="assets/esferico/assetsRex/asset.gltf"></a-asset-item>
         </a-assets>
