--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <a-scene loading-screen="enabled: false;" renderer="logarithmicDepthBuffer: true;">
         <a-assets>
             <!-- Cargar el modelo envolvente glTF -->
-            <a-asset-item id="environment-asset" src="https://github.com/annakary/models-esphericals-VR/blob/main/assets/new-world/scene.gltf"></a-asset-item>
+            <a-asset-item id="environment-asset" src="https://www.senderouabcs.com/files/assetsesferico/new-world/scene.gltf"></a-asset-item>
             <!-- Cargar el modelo interior glTF -->
-            <a-asset-item id="interior-asset" src="assets/esferico/assetsRex/asset.gltf"></a-asset-item>
+            <a-asset-item id="interior-asset" src="https://www.senderouabcs.com/files/assetsRex/scene.gltf"></a-asset-item>
         </a-assets>
 
         <!-- Configurar la cámara dentro del entorno -->
