--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         
         <!-- Añadir el modelo interior 3D dentro del entorno -->
         <a-entity id="interior-model" 
-            scale="0.25402344748577780 0.25402344748577780 0.25402344748577780"
+            scale="12.25402344748577780 12.25402344748577780 12.25402344748577780"
             animation-mixer="clip: run"
             gltf-model="#interior-asset" 
-                  position="0 0.70 -2.0"></a-entity>
+                  position="10 -35 80"
+                  rotation="0 185 0"></a-entity>
     </a-scene>
 </body>
 </html>
